<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="first_radio">Glide - Image Loading Library By BumpTech</string>
    <string name="second_radio">LoadApp - Current repository by Udacity</string>
    <string name="third_radio">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="channel_id">channel ID</string>
    <string name="ok">OK</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
</resources>
